--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "flowbite-react": "^0.5.0",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.64.2"
   },
