--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "flowbite-react": "^0.5.0",
